added hooks, api and most of the routing

--- a/src/components/quotes/HighlightedQuote.module.css
+++ b/src/components/quotes/HighlightedQuote.module.css
@@ -1,4 +1,4 @@
-.note {
+.quote {
   background-color: #162b2b;
   color: white;
   border-radius: 6px;
@@ -8,11 +8,11 @@
   max-width: 40rem;
 }
 
-.note p {
+.quote p {
   font-size: 2.5rem;
 }
 
-.note figcaption {
+.quote figcaption {
   font-style: italic;
   font-size: 1.5rem;
   text-align: right;
